access route working. need to add checks for the list and task route
